syntax = "proto3";

package template;

service TemplateService {
  rpc GetTemplateById (GetTemplateRequest) returns (GetTemplateResponse);
}

message GetTemplateRequest {
  string id = 1;
}

message GetTemplateResponse {
  string id = 1;
  string name = 2;
  string subject = 3;
  string body = 4;
  int32 version = 5;
  string language = 6;
}