syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserIdRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message UserIdRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string fcm_token = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string fcm_token = 4;
  UserPreferences preferences = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserPreferences {
  bool email_enabled = 1;
  bool push_enabled = 2;
  QuietHours quiet_hours = 3;
}

message QuietHours {
  string start = 1;
  string end = 2;
}
